[package]
name = "mpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.14.1"
keccak-hash = "0.10.0"
log = "0.4.16"
parking_lot = "0.12"
rlp = "0.5.1"
hashbrown = "0.14.0"
rusqlite = {version = "0.32.1", features = ["bundled"]}


[dev-dependencies]
rand = "0.8.3"
hex = "0.4.2"
criterion = "0.5.1"
uuid = { version = "1.4.1", features = ["serde", "v4"] }